--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,9 +16,16 @@ body {
     flex-direction: column; 
 }
 
-.display {
-    padding: 10px;
+.displayContainer {
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.display, .displayOP {
+    height: 25px;
+    padding: 5px;
 }
 
 .input {
