--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,9 +55,12 @@ button {
     flex: auto;
 }
 
-.btnZero {
+.btnClear,.btnZero {
     flex: 66.66%;
 }
-.btnDot {
+
+.btnDel, .btnDot{
     flex: 33.33%;
 }
+
+
