--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-* {
+html {
     box-sizing: border-box;
 }
 
@@ -9,11 +9,9 @@ body {
 }
 
 .calc {
-    border: 1px solid black;
-    width: 500px; 
-    height: 500px;
-    display: flex;
-    flex-direction: column; 
+    border: 1px solid red;
+    width: 328px; 
+    height: 422px;
 }
 
 .displayContainer {
@@ -24,43 +22,53 @@ body {
 }
 
 .display, .displayOP {
-    height: 25px;
+    height: 15px;
     padding: 5px;
 }
 
 .input {
-    flex: auto;
     display: flex;
-    flex-direction: row;
     border: 1px solid blue;
 }
 
 .numContainer, .opContainer {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid blue;
-    flex: 2;
-}
-
-.opContainer {
-    flex: 1;
+    /* display: flex;
+    flex-direction: column; */
+    border: 5px solid green;
+    /* flex: 2; */
 }
 
 .row {
     display: flex;
-    flex: auto;
+    justify-content: center;
+    align-items: center;
 }
 
 button {
-    flex: auto;
+    flex: 1 1 1;
+    width: 25px;
+    height: 25px;
+    border-radius:50%;
+    padding: 30px;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+}
+
+.btnOp, .btnEquals {
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .btnClear,.btnZero {
-    flex: 66.66%;
-}
-
-.btnDel, .btnDot{
-    flex: 33.33%;
+    /* flex: 10%; */
+    padding-top: 30px;
+    padding-bottom: 30px;
+    width: 150px;
+    border-radius: 25px;
+    justify-content: flex-start;
 }
 
 
